[package]
name = "config-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
directories = "5.0.1"
eyre = "0.6.12"
git2 = "0.18.1"
inquire = "0.6.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
