[package]
name = "ycm"
description = "Yorch's Config Manager"
license = "MIT OR Apache-2.0"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]
repository = "https://github.com/JorgeMayoral/ycm"
readme = "README.md"
homepage = "https://jorgemayoral.github.io/ycm/"
keywords = ["dotfiles", "cli", "configuration"]
categories = ["command-line-utilities"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
directories = "5.0.1"
eyre = "0.6.12"
inquire = "0.7.4"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "upload"
